Revision history for Dist-Zilla-Plugin-GitHubREADME-Badge

{{$NEXT}}

0.03  2014-09-22 19:43:33 CST
        - add args place (top or bottom)

0.02  2014-09-22 19:12:02 CST
        - pass to FAYLAND

0.01  2014-09-22 19:06:46 CST
        - Initial release