@@ -58,5 +58,3 @@ Copyright 2014- Fayland Lam
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
-
-# SEE ALSO
